--- a/package.json
+++ b/package.json
@@ -10,21 +10,25 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "jquery": "^3.3.1",
+    "slick-carousel": "^1.8.1"
+  },
+  "devDependencies": {
     "@babel/core": "^7.0.0-beta.38",
     "@babel/preset-env": "^7.0.0-beta.38",
     "autoprefixer": "^8.0.0",
     "babel-loader": "^8.0.0-beta.0",
+    "css-loader": "^0.28.9",
+    "expose-loader": "^0.7.5",
+    "extract-text-webpack-plugin": "^3.0.2",
     "imagemin": "^5.3.1",
     "imagemin-jpegtran": "^5.0.2",
     "imagemin-pngquant": "^5.1.0",
-    "postcss-loader": "^2.1.0",
-    "webpack": "^3.10.0"
-  },
-  "devDependencies": {
-    "css-loader": "^0.28.9",
-    "extract-text-webpack-plugin": "^3.0.2",
     "node-sass": "^4.7.2",
+    "postcss-loader": "^2.1.0",
     "sass-loader": "^6.0.6",
-    "style-loader": "^0.20.1"
+    "style-loader": "^0.20.1",
+    "webpack": "^3.10.0",
+    "url-loader": "^1.0.1"
   }
 }
