--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "jquery": "^3.3.1",
-    "slick-carousel": "^1.8.1"
+    "jquery": "^3.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.38",
@@ -21,14 +20,11 @@
     "css-loader": "^0.28.9",
     "expose-loader": "^0.7.5",
     "extract-text-webpack-plugin": "^3.0.2",
-    "imagemin": "^5.3.1",
-    "imagemin-jpegtran": "^5.0.2",
-    "imagemin-pngquant": "^5.1.0",
     "node-sass": "^4.7.2",
     "postcss-loader": "^2.1.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.1",
-    "webpack": "^3.10.0",
-    "url-loader": "^1.0.1"
+    "url-loader": "^1.0.1",
+    "webpack": "^3.10.0"
   }
 }
