--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expose-loader": "^0.7.5",
     "extract-text-webpack-plugin": "^3.0.2",
     "node-sass": "^4.9.3",
+    "normalize.css": "^8.0.0",
     "postcss-loader": "^2.1.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.1",
