--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
     "jquery": "^3.3.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.38",
-    "@babel/preset-env": "^7.0.0-beta.38",
+    "@babel/core": "^7.3.3",
+    "@babel/preset-env": "^7.3.1",
     "autoprefixer": "^8.0.0",
     "babel-loader": "^8.0.0-beta.0",
     "css-loader": "^0.28.9",
     "expose-loader": "^0.7.5",
     "extract-text-webpack-plugin": "^3.0.2",
-    "node-sass": "^4.9.3",
+    "node-sass": "^4.11.0",
     "normalize.css": "^8.0.0",
     "postcss-loader": "^2.1.0",
     "sass-loader": "^6.0.6",
