--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "html_starter_pack",
+  "name": "project-template",
   "version": "1.0.0",
-  "description": "html_starter_pack",
+  "description": "project-template",
   "main": "index.js",
   "scripts": {
     "build": "webpack",
