--- a/package.json
+++ b/package.json
@@ -10,26 +10,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "jquery": "^3.4.1"
+    "jquery": "^3.3.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.4",
-    "@babel/preset-env": "^7.4.4",
-    "autoprefixer": "^8.6.5",
-    "babel-loader": "^8.0.5",
-    "css-loader": "^2.1.1",
-    "cssnano": "^4.1.10",
+    "@babel/core": "^7.3.3",
+    "@babel/preset-env": "^7.3.1",
+    "autoprefixer": "^8.0.0",
+    "babel-loader": "^8.0.0-beta.0",
+    "css-loader": "^0.28.9",
     "expose-loader": "^0.7.5",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "node-gyp": "^4.0.0",
-    "node-sass": "^4.12.0",
-    "normalize.css": "^8.0.1",
-    "postcss-loader": "^3.0.0",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "node-sass": "^4.11.0",
+    "normalize.css": "^8.0.0",
+    "postcss-loader": "^2.1.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.1",
-    "tar": "^4.4.8",
-    "url-loader": "^1.1.2",
-    "webpack": "^4.31.0",
-    "webpack-cli": "^3.3.2"
+    "url-loader": "^1.0.1",
+    "webpack": "^3.10.0"
   }
 }
