--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "@babel/preset-env": "^7.3.1",
     "autoprefixer": "^8.0.0",
     "babel-loader": "^8.0.0-beta.0",
-    "css-loader": "^0.28.9",
+    "css-loader": "^2.1.1",
+    "cssnano": "^4.1.10",
     "expose-loader": "^0.7.5",
     "extract-text-webpack-plugin": "^3.0.2",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.12.0",
     "normalize.css": "^8.0.0",
     "postcss-loader": "^2.1.0",
     "sass-loader": "^6.0.6",
