--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/preset-env": "^7.3.1",
     "autoprefixer": "^8.0.0",
     "babel-loader": "^8.0.0-beta.0",
+    "babel-preset-minify": "^0.5.0",
     "css-loader": "^2.1.1",
     "cssnano": "^4.1.10",
     "expose-loader": "^0.7.5",
@@ -26,6 +27,7 @@
     "postcss-loader": "^2.1.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.1",
+    "uglifyjs-webpack-plugin": "^2.1.3",
     "url-loader": "^1.0.1",
     "webpack": "^3.10.0"
   }
