--- a/package.json
+++ b/package.json
@@ -9,9 +9,6 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "jquery": "^3.3.1"
-  },
   "devDependencies": {
     "@babel/core": "^7.3.3",
     "@babel/preset-env": "^7.3.1",
@@ -29,6 +26,7 @@
     "sass-loader": "^6.0.6",
     "sass-resources-loader": "^2.0.1",
     "style-loader": "^0.20.1",
+    "uglifyjs-webpack-plugin": "^2.1.3",
     "url-loader": "^1.0.1",
     "vue": "^2.6.6",
     "vue-loader": "^15.6.4",
